<?xml version="1.0"?>
<package>
  <name>picoflexx</name>
  <version>0.1.0</version>
  <description>The picoflexx support package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <maintainer email="theodore.f.morse@nasa.gov">Ted Morse</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
